DigicielFull/force-app/main/default/objects/Work_Order__c/fields/Contact_Alternative__c.field-meta.xml
<CustomField>
    <fullName>Contact_Alternative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact (Alternative)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Work Orders (Contact (Alternative))</relationshipLabel>
    <relationshipName>Work_Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>