DigicielFull/force-app/main/default/objects/Work_Order__c/fields/Contact_Alternative_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Alternative_Phone__c</fullName>
    <formula>Contact_Alternative__r.Phone</formula>
    <label>Contact (Alternative) Phone</label>
    <type>Text</type>
</CustomField>