DigicielFull/force-app/main/default/objects/Work_Order__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <formula>Service_Request__r.Country__c</formula>
    <label>Country</label>
    <type>Text</type>
</CustomField>