DigicielFull/force-app/main/default/objects/Work_Order__c/fields/Date_Removed_from_Field_Survey_Rqd__c.field-meta.xml
<CustomField>
    <fullName>Date_Removed_from_Field_Survey_Rqd__c</fullName>
    <label>Date Removed from Field Survey Rqd</label>
    <type>Date</type>
</CustomField>