DigicielFull/force-app/main/default/objects/Work_Order__c/fields/Date_Status_Removed_from_Customer_Hold__c.field-meta.xml
<CustomField>
    <fullName>Date_Status_Removed_from_Customer_Hold__c</fullName>
    <label>Date Status Removed from Customer Hold</label>
    <type>Date</type>
</CustomField>