DigicielFull/force-app/main/default/objects/Work_Order__c/fields/Date_Status_Updtd_to_Reverted_to_Digicel__c.field-meta.xml
<CustomField>
    <fullName>Date_Status_Updtd_to_Reverted_to_Digicel__c</fullName>
    <description>tracks the date the status was updated to Reverted to Digicel</description>
    <label>Date Status Updtd to Reverted to Digicel</label>
    <type>Date</type>
</CustomField>