DigicielFull/force-app/main/default/objects/Work_Order__c/fields/Date_Updated_to_Field_Survey_Rqd__c.field-meta.xml
<CustomField>
    <fullName>Date_Updated_to_Field_Survey_Rqd__c</fullName>
    <label>Date Updated to Field Survey Rqd</label>
    <type>Date</type>
</CustomField>