DigicielFull/force-app/main/default/objects/Work_Order__c/fields/DTS_Connection_Charge__c.field-meta.xml
<CustomField>
    <fullName>DTS_Connection_Charge__c</fullName>
    <label>DTS Connection Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>