DigicielFull/force-app/main/default/objects/Work_Order__c/fields/Est_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Est_Scheduled_Date__c</fullName>
    <label>Est Scheduled Date</label>
    <type>Date</type>
</CustomField>