DigicielFull/force-app/main/default/objects/Work_Order__c/fields/No_of_Days_At_Field_Survey_Rqd__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days_At_Field_Survey_Rqd__c</fullName>
    <description>Counts the number of days at Field Survey required based on working days</description>
    <formula>(Date_Removed_from_Field_Survey_Rqd__c - Date_Updated_to_Field_Survey_Rqd__c ) - 
( FLOOR ( ( ( (Date_Removed_from_Field_Survey_Rqd__c) - Date_Updated_to_Field_Survey_Rqd__c) / 7 ) ) * 2 ) + 
CASE(MOD ( Date_Updated_to_Field_Survey_Rqd__c - DATE( 1900,1,6 ),7), 
0,CASE( MOD ((Date_Removed_from_Field_Survey_Rqd__c) - DATE( 1900,1,6 ),7),0,1,2 ), 
1,CASE( MOD ((Date_Removed_from_Field_Survey_Rqd__c) - DATE( 1900,1,6 ),7),0,2,1 ), 
IF(MOD( Date_Updated_to_Field_Survey_Rqd__c - DATE( 1900,1,6 ),7) - MOD((Date_Removed_from_Field_Survey_Rqd__c) - DATE( 1900,1,6 ),7) &lt;= 0 ,0, 
IF(MOD((Date_Removed_from_Field_Survey_Rqd__c) - DATE( 1900,1,6 ),7) = 0,1,-2 ) ))</formula>
    <inlineHelpText>Counts the number of days at Field Survey required based on working days</inlineHelpText>
    <label>No of Days At Field Survey Rqd</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>