DigicielFull/force-app/main/default/objects/Work_Order__c/fields/No_Of_Days_On_Customer_Hold__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Days_On_Customer_Hold__c</fullName>
    <description>counts the number of days on customer hold based working days</description>
    <formula>(Date_Status_Removed_from_Customer_Hold__c - Date_Status_Updated_to_Customer_Hold__c ) - 
( FLOOR ( ( ( (Date_Status_Removed_from_Customer_Hold__c) - Requested_Date__c ) / 7 ) ) * 2 ) + 
CASE(MOD ( Date_Status_Updated_to_Customer_Hold__c - DATE( 1900,1,6 ),7), 
0,CASE( MOD ((Date_Status_Removed_from_Customer_Hold__c) - DATE( 1900,1,6 ),7),0,1,2 ), 
1,CASE( MOD ((Date_Status_Removed_from_Customer_Hold__c) - DATE( 1900,1,6 ),7),0,2,1 ), 
IF(MOD( Date_Status_Updated_to_Customer_Hold__c - DATE( 1900,1,6 ),7) - MOD((Date_Status_Removed_from_Customer_Hold__c) - DATE( 1900,1,6 ),7) &lt;= 0 ,0, 
IF(MOD((Date_Status_Removed_from_Customer_Hold__c) - DATE( 1900,1,6 ),7) = 0,1,-2 ) ))</formula>
    <inlineHelpText>counts the number of days on customer hold based working days</inlineHelpText>
    <label>No Of Days On Customer Hold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>