DigicielFull/force-app/main/default/objects/Work_Order__c/fields/Opp_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opp_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opp Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>