DigicielFull/force-app/main/default/objects/Work_Order__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <formula>Service_Request__r.Opportunity_Owner__c</formula>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>