DigicielFull/force-app/main/default/objects/Work_Order__c/fields/Opportunity_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Email__c</fullName>
    <formula>Opp_Owner__r.Email</formula>
    <label>Opportunity Owner Email</label>
    <type>Text</type>
</CustomField>