DigicielFull/force-app/main/default/objects/Work_Order__c/fields/Parish_Region_Department__c.field-meta.xml
<CustomField>
    <fullName>Parish_Region_Department__c</fullName>
    <formula>Service_Request__r.Parish_Region_Department__c</formula>
    <label>Parish / Region / Department</label>
    <type>Text</type>
</CustomField>