DigicielFull/force-app/main/default/objects/Work_Order__c/fields/POP__c.field-meta.xml
<CustomField>
    <fullName>POP__c</fullName>
    <description>Field creation was requested in Case# 00259444</description>
    <label>POP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manor Lodge</fullName>
            </value>
            <value>
                <fullName>Wildey</fullName>
            </value>
            <value>
                <fullName>Carlton Cricket Club</fullName>
            </value>
            <value>
                <fullName>Durants Village</fullName>
            </value>
            <value>
                <fullName>Oistins</fullName>
            </value>
            <value>
                <fullName>Needhams Point</fullName>
            </value>
            <value>
                <fullName>Six Roads</fullName>
            </value>
            <value>
                <fullName>Speightstown</fullName>
            </value>
            <value>
                <fullName>Prism</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>