DigicielFull/force-app/main/default/objects/Work_Order__c/fields/Service_Delivery_Contact__c.field-meta.xml
<CustomField>
    <fullName>Service_Delivery_Contact__c</fullName>
    <formula>Service_Request__r.Owner:User.Username</formula>
    <label>Service Delivery Contact</label>
    <type>Text</type>
</CustomField>