DigicielFull/force-app/main/default/objects/Work_Order__c/fields/Sieral_Number__c.field-meta.xml
<CustomField>
    <fullName>Sieral_Number__c</fullName>
    <label>Serial Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>