DigicielFull/force-app/main/default/objects/Work_Order__c/fields/Street_1__c.field-meta.xml
<CustomField>
    <fullName>Street_1__c</fullName>
    <formula>Service_Request__r.Street_1__c</formula>
    <label>Street 1</label>
    <type>Text</type>
</CustomField>