DigicielFull/force-app/main/default/objects/Work_Order__c/fields/Terminal_No__c.field-meta.xml
<CustomField>
    <fullName>Terminal_No__c</fullName>
    <label>Terminal No</label>
    <length>9</length>
    <type>Text</type>
</CustomField>