DigicielFull/force-app/main/default/objects/Work_Order__c/fields/Vlan_Number__c.field-meta.xml
<CustomField>
    <fullName>Vlan_Number__c</fullName>
    <label>Vlan Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>