DigicielFull/force-app/main/default/objects/Work_Order__c/fields/WO_Instructions__c.field-meta.xml
<CustomField>
    <fullName>WO_Instructions__c</fullName>
    <description>Details the actions required by the contractor</description>
    <label>WO Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>