DigicielFull/force-app/main/default/objects/Work_Order__c/fields/WO_Status__c.field-meta.xml
<CustomField>
    <fullName>WO_Status__c</fullName>
    <label>WO Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
                <default>true</default>
                <label>Requested</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Customer Hold</fullName>
            </value>
            <value>
                <fullName>Extension Required</fullName>
            </value>
            <value>
                <fullName>Survey Required</fullName>
            </value>
            <value>
                <fullName>Not Service Ready</fullName>
            </value>
            <value>
                <fullName>Installed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Reverted to Digicel</fullName>
            </value>
            <value>
                <fullName>FTTH FATs Req</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>