DigicielFull/force-app/main/default/objects/Work_Order__c/fields/Work_Order_Details__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Details__c</fullName>
    <description>Pull details from Service Request Details field</description>
    <formula>Service_Request__r.Service_Request_Details__c</formula>
    <label>Work Order Details</label>
    <type>Text</type>
</CustomField>