DigicielFull/force-app/main/default/objects/Work_Order__c/fields/Work_Order_Key__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Key__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Order Key</label>
    <type>Text</type>
</CustomField>