DigicielFull/force-app/main/default/objects/Work_Order__c/recordTypes/Change_Request.recordType-meta.xml
<RecordType>
    <fullName>Change_Request</fullName>
    <active>true</active>
    <description>Change request to Set up in Customer premises</description>
    <label>Change Request</label>
</RecordType>