DigicielFull/force-app/main/default/objects/Work_Order__c/recordTypes/Disconnection.recordType-meta.xml
<RecordType>
    <fullName>Disconnection</fullName>
    <active>true</active>
    <description>Request to remove Service</description>
    <label>Disconnection</label>
</RecordType>