DigicielFull/force-app/main/default/objects/Work_Order__c/recordTypes/Installation.recordType-meta.xml
<RecordType>
    <fullName>Installation</fullName>
    <active>true</active>
    <description>Used for Installations</description>
    <label>Installation</label>
</RecordType>