DigicielFull/force-app/main/default/objects/Work_Order__c/validationRules/ICT_BB_Work_Order_Update_Completed_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>ICT_BB_Work_Order_Update_Completed_Date</fullName>
    <active>true</active>
    <description>Work order must have a completed date if selecting status of Completed</description>
    <errorConditionFormula>AND ( 
ISPICKVAL( WO_Status__c , &quot;Completed&quot;), 
 ISBLANK( Completed_Date__c ))</errorConditionFormula>
    <errorDisplayField>Completed_Date__c</errorDisplayField>
    <errorMessage>Must enter a completed date when updating status to completed</errorMessage>
</ValidationRule>