DigicielFull/force-app/main/default/objects/Work_Order__c/listViews/Anguilla_Service_Request_Queue_Work_Order.listView-meta.xml
<ListView>
    <fullName>Anguilla_Service_Request_Queue_Work_Order</fullName>
    <filterScope>Queue</filterScope>
    <label>Anguilla Service Request Queue</label>
    <queue>Anguilla_Service_Request_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>