DigicielFull/force-app/main/default/objects/Work_Order__c/listViews/Dominica_Service_Request_Queue_Work_Order.listView-meta.xml
<ListView>
    <fullName>Dominica_Service_Request_Queue_Work_Order</fullName>
    <filterScope>Queue</filterScope>
    <label>Dominica Service Request Queue</label>
    <queue>Dominica_Service_Request_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>