DigicielFull/force-app/main/default/objects/Work_Order__c/listViews/El_Salvador_SWITCH_Work_Order.listView-meta.xml
<ListView>
    <fullName>El_Salvador_SWITCH_Work_Order</fullName>
    <filterScope>Queue</filterScope>
    <label>El Salvador SWITCH</label>
    <queue>El_Salvador_SWITCH</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>