DigicielFull/force-app/main/default/objects/Work_Order__c/listViews/FWI_Service_Request_Queue_Work_Order.listView-meta.xml
<ListView>
    <fullName>FWI_Service_Request_Queue_Work_Order</fullName>
    <filterScope>Queue</filterScope>
    <label>FWI Service Request Queue</label>
    <queue>FWI_Service_Request_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>