DigicielFull/force-app/main/default/objects/Work_Order__c/listViews/ICT_Barbados_Technical_Work_Order.listView-meta.xml
<ListView>
    <fullName>ICT_Barbados_Technical_Work_Order</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Queue</filterScope>
    <label>ICT Barbados Technical</label>
    <language>en_US</language>
    <queue>ICT_Barbados_Technical</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>